Todos los metodos end points funcionan

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 PORT=8000
 SECRETORPRIVATEKEY=1st1l3st0r32024PK3y
+BDNA=railway
+BDPA=CkFePoFWIvyyNNxDfKLBMkbSHoPzwhpd
+BDHA=monorail.proxy.rlwy.net
+BDUA=root
+BDPTA=16924
