--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 PORT=8000
 SECRETORPRIVATEKEY=1st1l3st0r32024PK3y
-DB_AGENDA_ESPECIALISTA=railway
-USERNAME_DB_AGENDA_ESPECIALISTA=root
-PASSWORD_DB_AGENDA_ESPECIALISTA=EFiceLImunJpDnXiblazNLITFWQGysay
-HOST_DB_AGENDA_ESPECIALISTA=roundhouse.proxy.rlwy.net
-PORT_DB_AGENDA_ESPECIALISTA=39414
-DB_PACIENTE=railway
-USERNAME_DB_PACIENTE=root
-PASSWORD_DB_PACIENTE=CkFePoFWIvyyNNxDfKLBMkbSHoPzwhpd
-HOST_DB_PACIENTE=monorail.proxy.rlwy.net
-PORT_DB_PACIENTE=16924
+# DB_AGENDA_ESPECIALISTA=agendafr_nathaly_morales
+# USERNAME_DB_AGENDA_ESPECIALISTA=agendafr_nathaly_morales
+# PASSWORD_DB_AGENDA_ESPECIALISTA=EFiceLImunJpDnXiblazNLITFWQGysay
+# HOST_DB_AGENDA_ESPECIALISTA=agendafree.cl
+# PORT_DB_AGENDA_ESPECIALISTA=3306
+# DB_PACIENTE=agendafr_general
+# USERNAME_DB_PACIENTE=agendafr_general
+# PASSWORD_DB_PACIENTE=CkFePoFWIvyyNNxDfKLBMkbSHoPzwhpd
+# HOST_DB_PACIENTE=agendafree.cl
+# PORT_DB_PACIENTE=3306
