Cambios Profesional y Persona

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ USERNAME_DB_PACIENTE=agendafr__AHYsXX3CxlTJsb4ypiCZxWEqWpU_oFHx
 PASSWORD_DB_PACIENTE=CkFePoFWIvyyNNxDfKLBMkbSHoPzwhpd
 HOST_DB_PACIENTE=agendafree.cl
 PORT_DB_PACIENTE=3306
+
+API_URL= http://localhost:8001/api/
