Se añadio archivo email.ts en carpeta config y se modifico metodo postPersona. Habilitado envio email

--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ HOST_DB_PACIENTE=agendafree.cl
 PORT_DB_PACIENTE=3306
 
 API_URL= http://localhost:8001/api/
+
+EMAIL_USER = codelopers.chile@gmail.com
+EMAIL_PASS = gthq wxev swjq gzub
