Se registra una persona con el metodo postPersona, creando usuario y persona juntos

--- a/.env
+++ b/.env
@@ -1,17 +1,15 @@
 PORT=8000
 SECRETORPRIVATEKEY=1st1l3st0r32024PK3y
-DB_AGENDA_ESPECIALISTA=agendafr_nathaly_morales
-USERNAME_DB_AGENDA_ESPECIALISTA=agendafr__AHYsXX3CxlTJsb4ypiCZxWEqWpU_oFHx
-PASSWORD_DB_AGENDA_ESPECIALISTA=CkFePoFWIvyyNNxDfKLBMkbSHoPzwhpd
-HOST_DB_AGENDA_ESPECIALISTA=agendafree.cl
-PORT_DB_AGENDA_ESPECIALISTA=3306
 DB_PACIENTE=agendafr_general
-USERNAME_DB_PACIENTE=agendafr__AHYsXX3CxlTJsb4ypiCZxWEqWpU_oFHx
+USERNAME_DB_PACIENTE=agendafr_general
 PASSWORD_DB_PACIENTE=CkFePoFWIvyyNNxDfKLBMkbSHoPzwhpd
-HOST_DB_PACIENTE=agendafree.cl
+# HOST_DB_PACIENTE=agendafree.cl
 PORT_DB_PACIENTE=3306
 
 API_URL= http://localhost:8001/api/
 
-EMAIL_USER = codelopers.chile@gmail.com
-EMAIL_PASS = gthq wxev swjq gzub
+# EMAIL_USER = codelopers.chile@gmail.com
+# EMAIL_PASS = gthq wxev swjq gzub
+
+EMAIL_USER = info@agendafree.cl
+EMAIL_PASS = code2024
