--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemailer": "^6.4.16",
+    "@types/uuid": "^10.0.0",
     "tslint": "^6.1.3",
     "typescript": "^5.4.5"
   },
@@ -28,6 +30,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7",
-    "sequelize": "^6.37.3"
+    "nodemailer": "^6.9.15",
+    "sequelize": "^6.37.3",
+    "uuid": "^10.0.0"
   }
 }
