--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SECRETORPRIVATEKEY=1st1l3st0r32024PK3y
 DB_PACIENTE=agendafr_general
 USERNAME_DB_PACIENTE=agendafr_general
 PASSWORD_DB_PACIENTE=CkFePoFWIvyyNNxDfKLBMkbSHoPzwhpd
-# HOST_DB_PACIENTE=agendafree.cl
+HOST_DB_PACIENTE=agendafree.cl
 PORT_DB_PACIENTE=3306
 
 API_URL= http://localhost:8001/api/
